hide copy button on deck for mobile devices

--- a/source/views/decks.jade
+++ b/source/views/decks.jade
@@ -50,6 +50,6 @@
                                 strong {{ card[0] }}
                               td(style="padding: 1px; margin: 1px; cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card[1]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                                 | {{ card[1] }}
-              button.btn.btn-success(ngclipboard data-clipboard-text="{{GetTextListFromDeckList(deck.CARDLIST)}}", tooltip="Copy cards to clipboard.")
+              button.btn.btn-success.hidden-xs(ngclipboard data-clipboard-text="{{GetTextListFromDeckList(deck.CARDLIST)}}", tooltip="Copy cards to clipboard.")
                 | Copy Card List to Clipboard 
                 span.glyphicon.glyphicon-copy
