--- a/source/views/decks.jade
+++ b/source/views/decks.jade
@@ -14,7 +14,7 @@
                   .col-sm-1.hidden-xs {{ deck.DATE | date:"MM/dd" }} 
                   .col-sm-3.col-xs-9 
                     | {{ deck.ARCHETYPE | titleCase }} 
-                    small ({{ deck.PLAYER | titleCase }})
+                    small.visible-xs ({{ deck.PLAYER | titleCase }})
                   .col-sm-2.hidden-xs {{ deck.PLAYER | titleCase }} 
                   .col-sm-4.hidden-xs {{ deck.EVENT | titleCase }} 
                   .col-xs-1 
@@ -52,6 +52,6 @@
                                 strong {{ card[0] }}
                               td(style="padding: 1px; margin: 1px; cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card[1]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                                 | {{ card[1] }}
-              button.btn.btn-success.hidden-xs(ngclipboard data-clipboard-text="{{GetTextListFromDeckList(deck.CARDLIST)}}", tooltip="Copy cards to clipboard.")
-                | Copy Card List to Clipboard 
-                span.glyphicon.glyphicon-copy
+                        button.btn.btn-success.hidden-xs(ngclipboard data-clipboard-text="{{GetTextListFromDeckList(deck.CARDLIST)}}", tooltip="Copy cards to clipboard.")
+                          | Copy Deck to Clipboard 
+                          span.glyphicon.glyphicon-copy
