auto-filter tweaks

--- a/source/css/main.less
+++ b/source/css/main.less
@@ -73,6 +73,16 @@ html {
 .fg-HUNTER  { color: darken(#ABD473,35%) !important; }
 .fg-PALADIN { color: darken(#F58CBA,35%) !important; }
 
+.fgl-MAGE    { color: #69CCF0 !important; }
+.fgl-PRIEST  { color: #F0F0F0 !important; }
+.fgl-WARLOCK { color: #9482C9 !important; }
+.fgl-SHAMAN  { color: #0070DE !important; }
+.fgl-WARRIOR { color: #C79C6E !important; }
+.fgl-DRUID   { color: #FF7D0A !important; }
+.fgl-ROGUE   { color: #FFF569 !important; }
+.fgl-HUNTER  { color: #ABD473 !important; }
+.fgl-PALADIN { color: #F58CBA !important; }
+
 .bg-MAGE    { background-color: #69CCF0 !important }
 .bg-PRIEST  { background-color: #F0F0F0 !important }
 .bg-WARLOCK { background-color: #9482C9 !important }
