--- a/source/views/decks.jade
+++ b/source/views/decks.jade
@@ -11,12 +11,12 @@
                 .row(class="fg-{{ deck.CLASS }}", style="font-size: 0.9em;")
                   .col-xs-1
                     img(src="{{ BaseURL }}/assets/Icon_{{ deck.CLASS | titleCase }}_64.png", height="26px;", style="margin-top: -10px; margin-bottom: -10px;")
-                  .col-sm-1.hidden-xs {{ deck.DATE | date:"MM/dd" }} 
                   .col-sm-3.col-xs-9 
                     | {{ deck.ARCHETYPE | titleCase }} 
-                    small.visible-xs ({{ deck.PLAYER | titleCase }})
+                    small.visible-xs ({{ deck.PLAYER | titleCase }} - {{ deck.DATE | date:"MM/dd" }})
                   .col-sm-2.hidden-xs {{ deck.PLAYER | titleCase }} 
-                  .col-sm-4.hidden-xs {{ deck.EVENT | titleCase }} 
+                  .col-sm-2.hidden-xs {{ deck.DATE | date:"MM/dd/yyyy" }} 
+                  .col-sm-3.hidden-xs {{ deck.EVENT | titleCase }} 
                   .col-xs-1 
                     span.glyphicon(ng-class="{'glyphicon-chevron-down': decklist.open, 'glyphicon-chevron-right': !decklist.open}")
               .table-responsive
