--- a/source/index.jade
+++ b/source/index.jade
@@ -10,6 +10,7 @@ html.no-js(xmlns:ng='http://angularjs.org', lang='en')
     // CSS libraries
     link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css')
     link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.css')
+    link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css')
     <!--[if lte IE 8]>
     link(rel='stylesheet', type='text/css', href='bootstrap-3.3.4-dist/css/bootstrap.min.css')
     <![endif]-->
