--- a/source/css/main.less
+++ b/source/css/main.less
@@ -63,14 +63,21 @@ html {
     border: none;
 }
 
+.fg-FREE { color: #9d9d9d }
+.fg-COMMON { color: #a9a9a9 }
+.fg-RARE { color: #0070dd }
+.fg-EPIC { color: #a335ee }
+.fg-LEGENDARY { color: #ff8000 }
+.fg-NEUTRAL    { color: #444444 !important; }
+
 .fg-MAGE    { color: darken(#69CCF0,35%) !important; }
-.fg-PRIEST  { color: darken(#F0F0F0,35%) !important; }
-.fg-WARLOCK { color: darken(#9482C9,35%) !important; }
-.fg-SHAMAN  { color: darken(#0070DE,35%) !important; }
-.fg-WARRIOR { color: darken(#C79C6E,35%) !important; }
-.fg-DRUID   { color: darken(#FF7D0A,35%) !important; }
-.fg-ROGUE   { color: darken(#FFF569,35%) !important; }
-.fg-HUNTER  { color: darken(#ABD473,35%) !important; }
+.fg-PRIEST  { color: darken(#F0F0F0,45%) !important; }
+.fg-WARLOCK { color: darken(#9482C9,15%) !important; }
+.fg-SHAMAN  { color: darken(#0070DE,15%) !important; }
+.fg-WARRIOR { color: darken(#C79C6E,25%) !important; }
+.fg-DRUID   { color: darken(#FF7D0A,25%) !important; }
+.fg-ROGUE   { color: darken(#FFF569,45%) !important; }
+.fg-HUNTER  { color: darken(#ABD473,25%) !important; }
 .fg-PALADIN { color: darken(#F58CBA,35%) !important; }
 
 .fgl-MAGE    { color: #69CCF0 !important; }
@@ -112,3 +119,10 @@ html {
 }
 
 .tooltip.in{opacity:1!important;}
+
+.slim-row{
+  padding-top: 1px !important;
+  margin-top: 1px !important;
+  padding-bottom: 1px !important;
+  margin-bottom: 1px !important;
+}
