--- a/source/views/helper.jade
+++ b/source/views/helper.jade
@@ -11,41 +11,48 @@
         .row
           .col-md-6
             .panel.panel-success
-                .panel-heading
-                  | Key Cards 
-                  small.pull-right ({{ GetCardCount(Tier1Cards) }} cards) 
-                table.table.table-striped.table-condensed(style="font-size: 0.8em;")
+              .panel-heading
+                | Key Cards 
+                small.pull-right ({{ GetCardCount(Tier1Cards) }} cards) 
+              .table-responsive
+                table.table.table-hover.table-condensed(style="font-size: 0.6em;")
                   thead
                     th Avg#
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-repeat="card in Tier1Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>") 
-                      td
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier1Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                      td.slim-row
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
-                      td
-                        strong
+                      td.slim-row 
+                        span(class="fg-{{ TempCardInfo[card.NAME].playerClass }}") 
+                          i.fa.fa-circle-o(class="fg-{{ TempCardInfo[card.NAME].rarity }}")
+                          &nbsp;
                           | {{ card.NAME }}
-                      td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
+                      td.slim-row 
+                        | {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}% 
           .col-md-6
-              .panel.panel-info
-                .panel-heading
-                  | Good Cards 
-                  small.pull-right ({{ GetCardCount(Tier2Cards) }} cards) 
-                table.table.table-striped.table-condensed(style="font-size: 0.8em;")
+            .panel.panel-info
+              .panel-heading
+                | Good Cards 
+                small.pull-right ({{ GetCardCount(Tier2Cards) }} cards) 
+              .table-responsive
+                table.table.table-hover.table-condensed(style="font-size: 0.6em;")
                   thead
                     th Avg#
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-repeat="card in Tier2Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
-                      td
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier2Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                      td.slim-row
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
-                      td
-                        strong
+                      td.slim-row 
+                        span(class="fg-{{ TempCardInfo[card.NAME].playerClass }}") 
+                          i.fa.fa-circle-o(class="fg-{{ TempCardInfo[card.NAME].rarity }}")
+                          &nbsp;
                           | {{ card.NAME }}
-                      td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
-  
+                      td.slim-row 
+                        | {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%  
   .col-sm-6
     .panel.panel-default
       .panel-heading
@@ -57,34 +64,42 @@
               .panel-heading
                 | Tech Cards 
                 small.pull-right ({{ GetCardCount(Tier3Cards) }} cards) 
-              table.table.table-striped.table-condensed(style="font-size: 0.8em;")
-                thead
-                  th Avg#
-                  th Card
-                  th Seen%
-                tbody
-                  tr(ng-repeat="card in Tier3Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
-                    td 
-                      strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
-                    td
-                      strong
-                        | {{ card.NAME }}
-                      td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
+              .table-responsive
+                table.table.table-hover.table-condensed(style="font-size: 0.6em;")
+                  thead
+                    th Avg#
+                    th Card
+                    th Seen%
+                  tbody
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier3Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                      td.slim-row
+                        strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
+                      td.slim-row 
+                        span(class="fg-{{ TempCardInfo[card.NAME].playerClass }}") 
+                          i.fa.fa-circle-o(class="fg-{{ TempCardInfo[card.NAME].rarity }}")
+                          &nbsp;
+                          | {{ card.NAME }}
+                      td.slim-row 
+                        | {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
           .col-md-6
             .panel.panel-danger
               .panel-heading
                 | Other Cards 
                 small.pull-right ({{ GetCardCount(Tier4Cards) }} cards) 
-              table.table.table-striped.table-condensed(style="font-size: 0.8em;")
-                thead
-                  th Avg#
-                  th Card
-                  th Seen%
-                tbody
-                  tr(ng-repeat="card in Tier4Cards | limitTo: 30", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
-                    td 
-                      strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
-                    td
-                      strong
-                        | {{ card.NAME }}
-                    td {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
+              .table-responsive
+                table.table.table-hover.table-condensed(style="font-size: 0.6em;")
+                  thead
+                    th Avg#
+                    th Card
+                    th Seen%
+                  tbody
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier4Cards | limitTo: 30", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                      td.slim-row
+                        strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
+                      td.slim-row 
+                        span(class="fg-{{ TempCardInfo[card.NAME].playerClass }}") 
+                          i.fa.fa-circle-o(class="fg-{{ TempCardInfo[card.NAME].rarity }}")
+                          &nbsp;
+                          | {{ card.NAME }}
+                      td.slim-row 
+                        | {{ card.SEENCOUNT / FILTERDECKDB.length * 100 | number: 1 }}%
