fix double card lookup

--- a/source/views/decks.jade
+++ b/source/views/decks.jade
@@ -48,7 +48,7 @@
                               th #
                               th Card
                             tbody
-                              tr(ng-init="deck.TempCardInfo[$index] = GetCardDBInfo(card[1]);", ng-repeat="card in deck.CARDLIST track by $index", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card[1]) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                              tr(ng-init="deck.TempCardInfo[$index] = GetCardDBInfo(card[1]);", ng-repeat="card in deck.CARDLIST track by $index", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(deck.TempCardInfo[$index]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                                 td.slim-row
                                   strong {{ card[0] }}
                                 td.slim-row 
