--- a/source/views/helper.jade
+++ b/source/views/helper.jade
@@ -21,7 +21,7 @@
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier1Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier1Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(TempCardInfo[card.NAME]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                       td.slim-row
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                       td.slim-row 
@@ -43,7 +43,7 @@
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier2Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier2Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(TempCardInfo[card.NAME]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                       td.slim-row
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                       td.slim-row 
@@ -71,7 +71,7 @@
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier3Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier3Cards | limitTo: 30", style="cursor: help;", tooltip-placement="right", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(TempCardInfo[card.NAME]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                       td.slim-row
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                       td.slim-row 
@@ -93,7 +93,7 @@
                     th Card
                     th Seen%
                   tbody
-                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier4Cards | limitTo: 30", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(card.NAME) }}' width='150px' height='227px'><div class='clearfix'></div>")
+                    tr(ng-init="TempCardInfo[card.NAME] = GetCardDBInfo(card.NAME);", ng-repeat="card in Tier4Cards | limitTo: 30", style="cursor: help;", tooltip-placement="left", tooltip-append-to-body="true", tooltip-html-unsafe="<img src='{{ GetCardImage(TempCardInfo[card.NAME]) }}' width='150px' height='227px'><div class='clearfix'></div>")
                       td.slim-row
                         strong {{ card.TOTALCOUNT / card.SEENCOUNT | number: 1 }}
                       td.slim-row 
