--- a/source/views/decks.jade
+++ b/source/views/decks.jade
@@ -56,6 +56,6 @@
                                     i.fa.fa-circle-o(class="fg-{{ deck.TempCardInfo[$index].rarity }}")
                                     &nbsp;
                                     | {{ card[1] }}
-                        button.btn.btn-success.hidden-xs(ngclipboard data-clipboard-text="{{GetTextListFromDeckList(deck.CARDLIST)}}", tooltip="Copy cards to clipboard.")
+                        button.btn.btn-success.hidden-xs(ngclipboard data-clipboard-text="{{GetTextListFromDeckList(deck.CARDLIST)}}")
                           | Copy Deck to Clipboard 
                           span.glyphicon.glyphicon-copy
