--- a/source/views/helper.jade
+++ b/source/views/helper.jade
@@ -3,6 +3,7 @@
     .panel.panel-primary
       .panel-heading
         | Main Cards to Consider
+        small ({{ FILTERDECKDB.length }} decks)
         .pull-right
           button.btn.btn-sm.btn-success(ngclipboard, data-clipboard-text="{{GetTextListFromCardGroup(CopyClipboardCards)}}", tooltip="Copy these cards to the Clipboard")
             span.glyphicon.glyphicon-copy
