--- a/source/index.jade
+++ b/source/index.jade
@@ -32,6 +32,40 @@ html.no-js(xmlns:ng='http://angularjs.org', lang='en')
       .container
         .row
           .col-sm-12
+            div.alert.alert-danger
+              h5
+                strong This site is Obsolete.
+              | HS Deck DB is no longer being updated! Please visit 
+              a(href="https://hsreplay.net/") HS Replay 
+              | and use this site going forward as it has all the features of my site and more, 
+              strong essentially making this site obsolete.
+            div.alert.alert-warning
+              h5 
+                strong Why the Shutdown?
+              p Exactly 1 year ago (4/29/2016), I started tracking decks in a Google Docs spreadsheet to watch how they would change over time. 
+                | From this, HS Deck DB was born. 
+              p In the last year, I've created this website and manually imported and reviewed over 4500 decks. 
+                | There have been some other great sites that came along since then such as 
+                a(href="http://metastats.net/") Metastats
+                | , but none of these sites actually served as a replacement for HS Deck DB.
+              p Well, the 
+                a(href="https://hsdecktracker.net/") Hearthstone Deck Tracker 
+                | team has created a site called 
+                a(href="https://hsreplay.net/") HS Replay 
+                | which is powered by data directly from HDT and tracks thousands of games at every rank.
+              p Realistically, there's no way I can compete with 
+                a(href="https://hsreplay.net/") HS Replay 
+                | , and I don't really see the need to, because it's been a great resource for me and served as a replacement for my site, 
+                | and that's why I've decided to shut down HS Deck DB. 
+              p I want to say a HUGE thank you to anyone who ever used my site and if you'd like to keep in touch with me personally 
+                | feel free to add me on bnet (
+                strong mudz#1694
+                | ).
+              br
+              h5
+                strong BELIEVE IN THE HEART OF THE CARDS!
+        .row
+          .col-sm-12
             div(accordion, close-others="true")
               div(accordion-group, is-open="Filters.Showing", class="panel-info")
                 div(accordion-heading)
